--- a/NeilGhosh.html
+++ b/NeilGhosh.html
@@ -62,35 +62,35 @@
   <h1 id="highlights">Highlights</h1><br>
   <div class="card-group">
     <div class="card">
-      <img src="https://www.amocrm.com/static/images/pages/integrations/logo/gmail.png" class="card-img-top" alt="Whoops!" width="100" height="150">
+      <img src="https://www.amocrm.com/static/images/pages/integrations/logo/gmail.png" class="card-img-top" alt="Whoops!">
       <div class="card-body">
         <h5 class="card-title">Email</h5>
         <p class="card-text">neilcg9@gmail.com</p>
       </div>
     </div>
     <div class="card">
-      <img src="https://publish.illinois.edu/watershed-ecosystem/files/2018/10/logo3-1.png" class="card-img-top" alt="Whoops!" width="100" height="150">
+      <img src="https://publish.illinois.edu/watershed-ecosystem/files/2018/10/logo3-1.png" class="card-img-top h-150" alt="Whoops!">
       <div class="card-body">
         <h5 class="card-title">University</h5>
         <p class="card-text">University of Illinois at Urbana-Champaign</p>
       </div>
     </div>
     <div class="card">
-      <img src="https://thumbs.dreamstime.com/b/infographic-showing-economics-trends-39390289.jpg" class="card-img-top" alt="Whoops!" width="100" height="150">
+      <img src="https://thumbs.dreamstime.com/b/infographic-showing-economics-trends-39390289.jpg" class="card-img-top h-150" alt="Whoops!">
       <div class="card-body">
         <h5 class="card-title">Major</h5>
         <p class="card-text">Economics</p>
       </div>
     </div>
     <div class="card">
-      <img src="https://pbs.twimg.com/media/EQLdCzYWoAIjcco.jpg" class="card-img-top" alt="Whoops!" width="100" height="150">
+      <img src="https://pbs.twimg.com/media/EQLdCzYWoAIjcco.jpg" class="card-img-top h-150" alt="Whoops!">
       <div class="card-body">
         <h5 class="card-title">Graduation</h5>
         <p class="card-text">August 2020</p>
       </div>
     </div>
     <div class="card">
-      <img src="GAF.PNG" alt="Whoops!" height="150">
+      <img src="GAF.PNG" class="card-img-top h-150" alt="Whoops!" >
       <div class="card-body">
         <h5 class="card-title">Employment</h5>
         <p class="card-text">Global Atlantic Financial Group</p>
