--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <h1 id="highlights">Highlights</h1><br>
   <div class="card-group">
     <div class="card">
-      <img src="https://www.amocrm.com/static/images/pages/integrations/logo/gmail.png" class="card-img-top" alt="Whoops!">
+      <img src="https://www.amocrm.com/static/images/pages/integrations/logo/gmail.png" class="card-img-top h-150" alt="Whoops!">
       <div class="card-body">
         <h5 class="card-title">Email</h5>
         <p class="card-text">neilcg9@gmail.com</p>
