--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       Tableau
     </div>
     <div class="col-sm">
-      Salesforce
+      Google Analytics
     </div>
   </div><br>
   <h4 style="text-decoration: underline">Economics Experience</h4><br>
