--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <a class="nav-item nav-link active" href="#about">About</a>
       <a class="nav-item nav-link active" href="#highlights">Highlights</a>
       <a class="nav-item nav-link active" href="#links">Links</a>
+      <a class="nav-item nav-link" href="#projects">Projects</a>
       <a class="nav-item nav-link active" href="#employment">Employment</a>
       <a class="nav-item nav-link active" href="#education">Education</a>
       <a class="nav-item nav-link active" href="#skills">Skills</a>
-<!--      <a class="nav-item nav-link" href="#projects">Projects</a>-->
 <!--      <a class="nav-item nav-link" href="#courses">Courses</a>-->
     </div>
   </div>
@@ -67,44 +67,44 @@
 
 <!--HIGHLIGHTS-->
 <div class="container">
-  <h1 id="highlights">Highlights</h1><br>
-  <div class="card-group">
-    <div class="card">
-      <img src="https://www.amocrm.com/static/images/pages/integrations/logo/gmail.png" class="card-img-top h-150" alt="Whoops!">
-      <div class="card-body">
-        <h5 class="card-title">Email</h5>
-        <p class="card-text">neilcg9@gmail.com</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://publish.illinois.edu/watershed-ecosystem/files/2018/10/logo3-1.png" class="card-img-top h-150" alt="Whoops!">
-      <div class="card-body">
-        <h5 class="card-title">University</h5>
-        <p class="card-text">University of Illinois at Urbana-Champaign</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://thumbs.dreamstime.com/b/infographic-showing-economics-trends-39390289.jpg" class="card-img-top h-150" alt="Whoops!">
-      <div class="card-body">
-        <h5 class="card-title">Major</h5>
-        <p class="card-text">Economics</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://pbs.twimg.com/media/EQLdCzYWoAIjcco.jpg" class="card-img-top h-150" alt="Whoops!">
-      <div class="card-body">
-        <h5 class="card-title">Graduation</h5>
-        <p class="card-text">August 2020</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="GAF.PNG" class="card-img-top h-150" alt="Whoops!" >
-      <div class="card-body">
-        <h5 class="card-title">Employment</h5>
-        <p class="card-text">Global Atlantic Financial Group</p>
-      </div>
+<h1 id="highlights">Highlights</h1><br>
+<div class="card-group">
+  <div class="card">
+    <img src="https://www.amocrm.com/static/images/pages/integrations/logo/gmail.png" class="card-img-top h-150" alt="Whoops!">
+    <div class="card-body">
+      <h5 class="card-title">Email</h5>
+      <p class="card-text">neilcg9@gmail.com</p>
     </div>
   </div>
+  <div class="card">
+    <img src="https://publish.illinois.edu/watershed-ecosystem/files/2018/10/logo3-1.png" class="card-img-top h-150" alt="Whoops!">
+    <div class="card-body">
+      <h5 class="card-title">University</h5>
+      <p class="card-text">University of Illinois at Urbana-Champaign</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://thumbs.dreamstime.com/b/infographic-showing-economics-trends-39390289.jpg" class="card-img-top h-150" alt="Whoops!">
+    <div class="card-body">
+      <h5 class="card-title">Major</h5>
+      <p class="card-text">Economics</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://pbs.twimg.com/media/EQLdCzYWoAIjcco.jpg" class="card-img-top h-150" alt="Whoops!">
+    <div class="card-body">
+      <h5 class="card-title">Graduation</h5>
+      <p class="card-text">August 2020</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="GAF.PNG" class="card-img-top h-150" alt="Whoops!" >
+    <div class="card-body">
+      <h5 class="card-title">Employment</h5>
+      <p class="card-text">Global Atlantic Financial Group</p>
+    </div>
+  </div>
+</div>
 </div>
 <!--END OF HIGHLIGHTS-->
 
@@ -116,6 +116,37 @@
   <a class="sp" href="https://github.com/neilcg2" target="_blank"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="50" height="50" alt="Whoops!"></a>
 </div>
 <!--END OF LINKS-->
+
+<!--PROJECTS-->
+<div class="container">
+<h1 id="projects">Projects</h1><br>
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleCaptions" data-slide-to="0"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="First%20Project.PNG" class="d-block w-100" alt="Whoops!">
+      <div class="carousel-caption d-none d-md-block">
+        <h5><a href="https://github.com/neilcg2/neilcg2.github.io" target="_blank" class="pro">This Website!</a></h5>
+        <p class="caro">My first personal project in front-end web development.</p><br>
+        <p class="caro">August 2020 - Present</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://mcusercontent.com/542c9a717f8e5166c5dbccc11/images/d31be47e-d6ac-47bb-918e-b944324bd0c5.png" class="d-block w-100" alt="Whoops!">
+      <div class="carousel-caption d-none d-md-block">
+        <h5><a href="https://www.dailyuplook.com/" target="_blank" class="pro">Daily Uplook</a></h5>
+        <p class="caro">A weekly curated newsletter with links and summaries of the most inspiring/feel-good news stories.</p><br>
+        <p class="caro">May 2020 - Present</p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+<!--END OF PROJECTS-->
 
 <!--EMPLOYMENT-->
 <div class="container">
