Footer, Project & Navbar changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <div class="navbar-nav">
+    <div class="navbar-nav mr-auto">
       <a class="nav-item nav-link active" href="#about">About</a>
       <a class="nav-item nav-link active" href="#highlights">Highlights</a>
       <a class="nav-item nav-link active" href="#links">Links</a>
@@ -339,7 +339,6 @@
 <!--FOOTER-->
 <footer>
   <small>Author: Neil Ghosh</small><br>
-  <small>neilcg9@gmail.com</small>
 </footer>
 <!--END OF FOOTER-->
 
