--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
       <td>Global Atlantic Financial Group</td>
       <td>Compensation Fall Analyst</td>
       <td>Boston, MA</td>
-      <td>August 2020 - Present</td>
-      <td>Accepted a return offer to continue managing compensation related projects while leading GA’s new workforce efficiency reporting efforts using MS Workplace Analytics</td>
+      <td>September 2020 - Present</td>
+      <td>Accepted a return offer to continue managing compensation related projects</td>
     </tr>
     <tr>
 <!--    <th class="text-nowrap" scope="row">Global Atlantic Financial Group</th>-->
