--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       Matplotlib
     </div>
     <div class="col-sm">
-      Statsmodel
+      Node.js
     </div>
   </div><br>
   <h4 style="text-decoration: underline">Software Applications</h4><br>
