--- a/Relevant Files/index.html
+++ b/Relevant Files/index.html
@@ -53,7 +53,7 @@
  <col span="1" style="width: 70%">
 </colgroup>
   <tr>
-    <th><img src="Profile.jpg" alt="Oops!" width="220" height="290" style="align-content: center"></th>
+    <th><img src="../Profile.jpg" alt="Oops!" width="220" height="290" style="align-content: center"></th>
     <th></th>
     <th style="font-weight: normal"><p>Hey there! I am a Compensation Fall Analyst working at Global Atlantic Financial Group.</p>
       <p>I am passionate about using my skillset in data science & analytics to gain insights into business strategy effectiveness, workplace efficiency and HR capabilities to guide key business decisions and drive productivity.</p>
@@ -98,7 +98,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="GAF.PNG" class="card-img-top h-150" alt="Whoops!" >
+    <img src="../GAF.PNG" class="card-img-top h-150" alt="Whoops!" >
     <div class="card-body">
       <h5 class="card-title">Employment</h5>
       <p class="card-text">Global Atlantic Financial Group</p>
@@ -125,15 +125,15 @@
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
         <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          This Website!
+          USA COVID-19 Visualizations
         </button>
       </h2>
     </div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
-        <p>My first personal project in front-end web development using only HTML & CSS.</p>
+        <p>Utlized Python to pull data from various (& reputable) online sources to create a time-series Excel outpu. This output feeds into Tableau to create State level COVID-19 visualizations and trends.</p>
         <p><a href="https://github.com/neilcg2/neilcg2.github.io" target="_blank">Github Repository</a></p>
-        <p>August 2020</p>
+        <p>October 2020</p>
       </div>
     </div>
   </div>
@@ -141,15 +141,15 @@
     <div class="card-header" id="headingTwo">
       <h2 class="mb-0">
         <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Daily Uplook
+          This Website!
         </button>
       </h2>
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <div class="card-body">
-        <p>A weekly curated newsletter with links and summaries of the most inspiring/feel-good news stories that tend to get overlooked amidst the pandemic.</p>
-        <p><a href="https://www.dailyuplook.com/" target="_blank">dailyuplook.com</a></p>
-        <p>May 2020</p>
+        <p>Utilized HTML & CSS for my first personal project in front-end web development to create this website.</p>
+        <p><a href="https://github.com/neilcg2/neilcg2.github.io" target="_blank">Github Repository</a></p>
+        <p>August 2020</p>
       </div>
     </div>
   </div>
@@ -266,49 +266,16 @@
   <div class="progress">
     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
   </div><br>
-  <p>JavaScript</p>
-  <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">60%</div>
-  </div><br>
+
   <p>SQL</p>
   <div class="progress">
     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">50%</div>
   </div><br>
-  <p>Here is a visual depiction of my programming language skills. This is NOT to scale and has been included with the intention of displaying my relative strength/knowledge in each language. This depiction in no way is a claim that I know the following percentage of each language. My apologies if this offends anyone's ideas or opinions.</p>
-  <h4 style="text-decoration: underline">Frameworks & Libraries</h4><br>
-  <div class="row">
-    <div class="col-sm">
-      Django
-    </div>
-    <div class="col-sm">
-      BootStrap
-    </div>
-    <div class="col-sm">
-      jQuery
-    </div>
+  <p>JavaScript</p>
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">30%</div>
   </div><br>
-  <div class="row">
-    <div class="col-sm">
-      Pandas
-    </div>
-    <div class="col-sm">
-      Numpy
-    </div>
-    <div class="col-sm">
-      Scikit-Learn
-    </div>
-  </div><br>
-  <div class="row">
-    <div class="col-sm">
-      BeautifulSoup
-    </div>
-    <div class="col-sm">
-      Matplotlib
-    </div>
-    <div class="col-sm">
-      Node.js
-    </div>
-  </div><br>
+  <p>Here is a visual depiction of my programming language skills. This is NOT to scale and has been included with the intention of displaying my relative strength/knowledge in each language. This depiction is in no way is a claim that I know the following percentage of each language. My apologies if this offends anyone's ideas or opinions.</p>
   <h4 style="text-decoration: underline">Software Applications</h4><br>
   <div class="row">
     <div class="col-sm">
