--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
  <col span="1" style="width: 70%">
 </colgroup>
   <tr>
-    <th><img src="../Profile.jpg" alt="Oops!" width="220" height="290" style="align-content: center"></th>
+    <th><img src="Profile.jpg" alt="Oops!" width="220" height="290" style="align-content: center"></th>
     <th></th>
     <th style="font-weight: normal"><p>Hey there! I am a Compensation Fall Analyst working at Global Atlantic Financial Group.</p>
       <p>I am passionate about using my skillset in data science & analytics to gain insights into business strategy effectiveness, workplace efficiency and HR capabilities to guide key business decisions and drive productivity.</p>
@@ -98,7 +98,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="../GAF.PNG" class="card-img-top h-150" alt="Whoops!" >
+    <img src="GAF.PNG" class="card-img-top h-150" alt="Whoops!" >
     <div class="card-body">
       <h5 class="card-title">Employment</h5>
       <p class="card-text">Global Atlantic Financial Group</p>
