--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
-        <p>Utlized Python to pull data from various (& reputable) online sources to create a time-series Excel outpu. This output feeds into Tableau to create State level COVID-19 visualizations and trends.</p>
+        <p>Utlized Python to pull data from various (& reputable) online sources to create a time-series Excel output. This output feeds into Tableau where I've created State-level COVID-19 visualizations and trends.</p>
         <p><a href="https://github.com/neilcg2/neilcg2.github.io" target="_blank">Github Repository</a></p>
         <p>October 2020</p>
       </div>
