--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <div class="card-body">
         <p>Utilized HTML & CSS for my first personal project in front-end web development to create this website.</p>
+        <p><a href="https://github.com/neilcg2/neilcg2.github.io/blob/master/index.html" target="_blank">HTML Code</a></p>
+        <p><a href="https://github.com/neilcg2/neilcg2.github.io/blob/master/NG.css" target="_blank">CSS Code</a></p>
         <p><a href="https://github.com/neilcg2/neilcg2.github.io" target="_blank">Github Repository</a></p>
         <p>August 2020</p>
       </div>
