--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   <div class="progress">
     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">30%</div>
   </div><br>
-  <p>Here is a visual depiction of my programming language skills. This is NOT to scale and has been included with the intention of displaying my relative strength/knowledge in each language. This depiction is in no way is a claim that I know the following percentage of each language. My apologies if this offends anyone's ideas or opinions.</p>
+  <p>Here is a visual depiction of my programming language skills. This is NOT to scale and has been included with the intention of displaying my relative strength/knowledge in each language. This depiction is in no way a claim that I know the following percentage of each language. My apologies if this offends anyone's ideas or opinions.</p>
   <h4 style="text-decoration: underline">Software Applications</h4><br>
   <div class="row">
     <div class="col-sm">
