--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
-        <p>Utlized Python to pull COVID-19 metrics and data from various (& reputable) online sources to create a time-series Excel output. This output feeds into Tableau where I've created State-level visualizations for every State I've ever visited.</p>
+        <p>Utlized Python, Excel and Tableau to create COVID-19 visualizations for every State I've ever visited.</p>
         <p><a href="https://github.com/neilcg2/covidvisualizations/blob/master/covid_project.py" target="_blank">Python Code</a></p>
         <p><a href="https://github.com/neilcg2/covidvisualizations/tree/master/Time-Series%20Excel%20Output" target="_blank">Daily Excel Time-Series Outputs</a></p>
         <p><a href="https://public.tableau.com/views/COVID-19Dashboard_16037623937750/COVID-19Metrics?:language=en&:display_count=y&:origin=viz_share_link" target="_blank">COVID-19 Visualizations</a></p>
